--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
         ======================== -->
 
         <!-- Add your JS here -->
+
+        <script src="js/scripts.js"></script>
         
     </body>
 </html>
